--- a/response/main.tex
+++ b/response/main.tex
@@ -3,12 +3,12 @@
 \setlength\parindent{0pt}
 \setlength{\parskip}{1em}
 \usepackage{authblk}
- 
+
 \title{Stability of defection, optimisation of strategies and the limits of
 memory in the Prisoner's Dilemma RESPONSE TO REVIEWS}
 
 \author{Nikoleta E. Glynatsi, Vincent A. Knight}
- 
+
 \begin{document}
 
 \maketitle
@@ -23,10 +23,10 @@ naturally fit in to two categories (which we will discuss in detail comment by c
 \begin{itemize}
     \item The first is an improvement of the theoretic results both in terms of
     their proofs but also the result themselves. For example, we omitted to
-    include a detail about the derivative of quadratic form in one of our proofs
+    include the derivative of a quadratic form in one of our proofs
     and also had only given that quadratic form for the specific case of \((R,
     P, T, S)=(3, 0, 5, 1)\). The reviewer was very right to point out issues
-    like this and we have addressed them all.
+    like this and we feel that we have addressed them all.
     \item The second reviewer questioned the general narrative of the paper as
     well as the evolutionary work. This was very helpful and we took time to
     reflect on the narrative of the paper. As a result of this we have changed
@@ -37,7 +37,7 @@ naturally fit in to two categories (which we will discuss in detail comment by c
 \end{itemize}
 
 We will now take each comment of the reviewers in turn and highlight our efforts
-made to improve the work.
+to improve the work.
 
 \section{Response}
 
@@ -60,8 +60,8 @@ This has been added in the proof of what used to be Theorem 2 but is now Theorem
 
 We agree with the comment of the reviewer. The utility was
 specific only for a given payoff matrix. We have generalised our result by
-considering the generalised payoffs \((R, S, T, P)\) and feel that not only is this a more useful 
-result and whilst we were worried that this closed form could be very messy it is in fact relatively elegant.
+considering the generalised payoffs \((R, S, T, P)\) and agree that this a more useful
+result and whilst we were worried that this closed form could be messy it is in fact relatively elegant.
 
 \begin{verbatim}
      ``Theorem 3: The proof in the Appendix did not show how to obtain equations
@@ -71,8 +71,7 @@ result and whilst we were worried that this closed form could be very messy it i
 Equations (22) - (24) relay on the derivative of the utility \(\sum\limits_{i=1}
 ^ N  u_q^{(i)}(p)\) which is a sum of quadratic form ratios. The derivative is
 obtained by using the property \(\frac{d x A x^T}{dx} =  2Ax\). We have added
-these details on the proof.
-
+these details and a reference text in the proof.
 \begin{verbatim}
      ``Theorem 3: and what was stated in (5)''
 \end{verbatim}
@@ -94,12 +93,13 @@ over the opponents of the previously obtained expression for the utility.
     extortionate. ''
 \end{verbatim}
 
-We agree with the comment of the reviewer. We are not running a evolutionary % TODO Vince to modify
-tournament and now understand that our wording was misleading. We study best
-response memory-one strategies that include self interactions which in a sense are
+We agree with the comment of the reviewer. We are not running a evolutionary
+process. We study best
+responses to memory-one strategies that include self interactions which in a sense are
 approximating evolutionary stable best response strategies. We have reworded
-the analysis of best response memory-one strategies that include self interactions
-and it's results.
+this part of the work to clarify that we are only considering the possibility of
+including self interactions and our results in an evolutionary process. We also explain how this could be
+used in a Moran process setting.
 
 \begin{verbatim}
     ``Another related problem is that the authors don't go into more detail about
@@ -108,7 +108,7 @@ and it's results.
     results section.''
 \end{verbatim}
 
-We have included more details of the SSE method and a better
+We have included details of the SSE method and a better
 discussion of the results based on Table 1. We have also included plots of the
 SSE distributions that accompany Table 1.
 
@@ -138,8 +138,8 @@ We thank the reviewer for their article recommendation. The findings of Hilbe et
 
 Thank you for this comment which encouraged us to reflect on the narrative of the
 paper. As a result we have modified the title of the manuscript and the titles
-of the sections. Moreover, the results of Section 1.2 have been to the Appendix,
-and the Theorem 1 (old version Theorem 2) has been moved in the main body.
+of the sections. Moreover, the results of Section 1.2 have been moved to the Appendix,
+and Theorem 1 (old version Theorem 2) has been moved in the main body.
 We feel that these changes improved our manuscript significantly.
 
 \begin{verbatim}
