--- a/template_submissions_to_scientific_reports/main.tex
+++ b/template_submissions_to_scientific_reports/main.tex
@@ -1,23 +1,38 @@
 \documentclass[fleqn,10pt]{wlscirep}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\title{Scientific Reports Title to see here}
+\usepackage[algoruled,lined]{algorithm2e}
+\usepackage{subcaption}
 
-\author[1,*]{Alice Author}
-\author[2]{Bob Author}
-\author[1,2,+]{Christine Author}
-\author[2,+]{Derek Author}
-\affil[1]{Affiliation, department, city, postcode, country}
-\affil[2]{Affiliation, department, city, postcode, country}
+\newcommand{\R}{\mathbb{R}}
+\newtheorem{theorem}{Theorem}
+\newtheorem{lemma}[theorem]{Lemma}
 
-\affil[*]{corresponding.author@email.example}
+\title{A theory of mind: Best responses to memory-one strategies. The limitations
+of extortion and restricted memory}
 
-\affil[+]{these authors contributed equally to this work}
+\author[1,*]{Nikoleta E. Glynatsi}
+\author[1]{Vincent A. Knight}
+\affil[1]{Cardiff University, School of Mathematics, Cardiff, CF24 4AG, United Kingdom}
+
+\affil[*]{glynatsine@cardiff.ac.uk}
+
+% \affil[+]{these authors contributed equally to this work}
 
 %\keywords{Keyword1, Keyword2, Keyword3}
 
 \begin{abstract}
-Example Abstract. Abstract must not include subheadings or citations. Example Abstract. Abstract must not include subheadings or citations. Example Abstract. Abstract must not include subheadings or citations. Example Abstract. Abstract must not include subheadings or citations. Example Abstract. Abstract must not include subheadings or citations. Example Abstract. Abstract must not include subheadings or citations. Example Abstract. Abstract must not include subheadings or citations. Example Abstract. Abstract must not include subheadings or citations.
+Memory-one strategies are a set of Iterated Prisoner's Dilemma strategies
+that have been praised for their mathematical tractability and performance
+against single opponents. This manuscript investigates a theory of mind: \textit{best
+response} memory-one strategies, as a multidimensional
+optimisation problem. We add to the literature that has shown that
+extortionate play is not always optimal by showing that optimal play is
+often not extortionate.
+We
+also provide evidence that memory-one strategies suffer from their limited
+memory in multi agent interactions and can be out performed by
+optimised strategies with longer memory.
 \end{abstract}
 \begin{document}
 
@@ -29,79 +44,604 @@ Example Abstract. Abstract must not include subheadings or citations. Example Ab
 %
 \thispagestyle{empty}
 
-\noindent Please note: Abbreviations should be introduced at the first mention in the main text – no abbreviations lists. Suggested structure of main text (not enforced) is provided below.
-
 \section*{Introduction}
 
-The Introduction section, of referenced text\cite{Figueredo:2009dg} expands on the background of the work (some overlap with the Abstract is acceptable). The introduction should not include subheadings.
+The Prisoner's Dilemma (PD) is a two player game used in understanding the
+evolution of cooperative behaviour, formally introduced in~\cite{Flood1958}.
+Each player has two options, to cooperate (C) or to defect (D). The decisions
+are made simultaneously and independently. The normal form representation of the
+game is given by:
+
+\begin{equation}\label{equ:pd_definition}
+    S_p =
+    \begin{pmatrix}
+        R & S  \\
+        T & P
+    \end{pmatrix}
+    \quad
+    S_q =
+    \begin{pmatrix}
+        R & T  \\
+        S & P
+    \end{pmatrix}
+\end{equation}
+
+where \(S_p\) represents the utilities of the row player and \(S_q\) the
+utilities of the column player. The payoffs, \((R, P, S, T)\), are constrained
+by \(T > R > P > S\) and \(2R > T + S\), and the most common values used in the
+literature are \((R, P, S, T) = (3, 1, 0, 5)\)~\cite{Axelrod1981}.
+The numerical experiments of our manuscript are carried out using these
+payoff values.
+The PD is a one shot game, however, it is commonly studied in a manner where the
+history of the interactions matters. The repeated form of the game is called the
+Iterated Prisoner's Dilemma (IPD).
+
+Memory-one strategies are a set of IPD strategies that have been
+studied thoroughly in the literature~\cite{Nowak1990, Nowak1993}, however, they have gained
+most of their attention when a certain subset of memory-one strategies was
+introduced in~\cite{Press2012}, the zero-determinant strategies (ZDs). In~\cite{Stewart2012} it
+was stated that ``Press and Dyson have fundamentally changed the viewpoint on
+the Prisoner's Dilemma''.
+A special case of ZDs are extortionate strategies that choose their actions so that a linear relationship is forced
+between the players' score ensuring that they will always
+receive at least as much as their opponents. ZDs are
+indeed mathematically unique and are proven to be robust in pairwise
+interactions, however, their true effectiveness in tournaments and
+evolutionary dynamics has been questioned~\cite{adami2013, Hilbe2013b,
+Hilbe2013, Hilbe2015, Knight2018, Harper2015}.
+
+In~\cite{Press2012} the authors stated that ``Only a player with a theory of
+mind about his opponent can do better, in which case Iterated Prisoner's Dilemma
+is an Ultimatum Game''. The purpose of this work is to investigate the first
+part of this sentence, more specifically, to identify the best response strategy
+with a theory of mind of a given group of opponents. The outcomes of our work
+reinforce known results, namely that memory-one strategies must be forgiving to
+be evolutionarily stable~\cite{Stewart2013, Stewart2016} and that longer-memory
+strategies have a certain form of advantage over short memory
+strategies~\cite{Hilbe2017, Pan2015}.
+
+In particular, this work presents a closed form algebraic expression for the utility
+of a memory-one strategy against a given set of opponents, a compact method of
+identifying it's best response to that given set of opponents essentially: a theory
+of mind. The aim is
+to evaluate whether a best response memory-one strategy behaves in a
+zero-determinant way which in turn indicates whether it can be extortionate. We
+do this using a linear algebraic approach presented in~\cite{Knight2019}.
+This is done in tournaments with and without self interactions. Moreover, we
+introduce a framework that allows the comparison of an optimal
+memory-one strategy and an optimised strategy which has a larger memory.
+
+To illustrate the analytical results obtained in this manuscript a number of
+numerical experiments are run. The source code for these experiments has been
+written in a sustainable manner~\cite{Benureau2018}.
+It is open source (\url{https://github.com/Nikoleta-v3/Memory-size-in-the-prisoners-dilemma})
+and tested which ensures the validity of the results. It has also been archived
+and can be found at~\cite{nikoleta_glynatsi_2019}.
+
+\section*{Methods}
+One specific advantage of memory-one strategies is their mathematical
+tractability. They can be represented completely as an element of \(\R^{4}_{[0, 1]}\). This
+originates from~\cite{Nowak1989} where it is stated that if a strategy is
+concerned with only the outcome of a single turn then there are four possible
+`states' the strategy could be in; both players cooperated (\(CC\)),
+the first player cooperated whilst the second player defected (\(CD\)),
+the first player defected whilst the second player cooperated (\(DC\)) and
+both players defected (\(DD\)).
+Therefore, a memory-one strategy can be denoted by the probability vector of
+cooperating after each of these states; \(p=(p_1, p_2, p_3, p_4) \in \R_{[0,1]}
+^ 4\).
+
+In~\cite{Nowak1989} it was shown that it is not necessary to simulate the play
+of a strategy $p$ against a memory-one opponent $q$. Rather this exact behaviour
+can be modeled as a stochastic process, and more specifically as a Markov chain
+whose corresponding transition matrix \(M\) is
+given by Eq.~\ref{eq:transition_matrix}. The long run steady state probability
+vector \(v\), which is the solution to \(v M = v\), can be
+combined with the payoff matrices of Eq.~\ref{equ:pd_definition} to give the expected
+payoffs for each player. More specifically, the utility for a memory-one
+strategy \(p\) against an opponent \(q\), denoted as \(u_q(p)\), is given by
+Eq.~\ref{eq:press_dyson_utility}.
+
+\begin{equation}\label{eq:transition_matrix}
+    \resizebox{.5\hsize}{!}{$\input{tex/m_matrix.tex}$}
+\end{equation}
+
+
+\begin{equation}\label{eq:press_dyson_utility}
+    u_q(p) = v \cdot (R, S, T, P).
+\end{equation}
+
+This manuscript has explored the form of \(u_q(p)\), to the authors knowledge no
+previous work has done this, and Theorem~\ref{theorem_one} states that \(u_q(p)\) is given by a ratio
+of two quadratic forms~\cite{kepner2011}.
+
+\begin{theorem}\label{theorem_one}
+    The expected utility of a memory-one strategy \(p\in\mathbb{R}_{[0,1]}^4\)
+    against a memory-one opponent \(q\in\mathbb{R}_{[0,1]}^4\), denoted
+    as \(u_q(p)\), can be written as a ratio of two quadratic forms:
+
+    \begin{equation}\label{eq:optimisation_quadratic}
+    u_q(p) = \frac{\frac{1}{2}pQp^T + cp + a}
+                {\frac{1}{2}p\bar{Q}p^T + \bar{c}p + \bar{a}},
+    \end{equation}
+    where \(Q, \bar{Q}\) \(\in \R^{4\times4}\) are square matrices defined by the
+    transition probabilities of the opponent \(q_1, q_2, q_3, q_4\) as follows:
+
+    \begin{center}
+    \begin{equation}
+    \resizebox{0.9\linewidth}{!}{\arraycolsep=2.5pt%
+    \boldmath\(
+    Q = \input{tex/q_numerator}\)},
+    \end{equation}
+    \begin{equation}\label{eq:q_bar_matrix}
+    \resizebox{0.8\linewidth}{!}{\arraycolsep=2.5pt%
+    \boldmath\(
+    \bar{Q} =  \input{tex/q_denominator}\)}.
+    \end{equation}
+    \end{center}
+
+    \(c \text{ and } \bar{c}\) \(\in \R^{4 \times 1}\) are similarly defined by:
+
+    \begin{equation}\label{eq:q_matrix_numerator}
+    \resizebox{0.6\linewidth}{!}{\arraycolsep=2.5pt%
+    \boldmath\(c = \input{tex/c_numerator}\),}
+    \end{equation}
+    \begin{equation}\label{eq:q_matrix_denominator}
+    \resizebox{0.3\linewidth}{!}{\arraycolsep=2.5pt%
+    \boldmath\(\bar{c} = \input{tex/c_denominator}\),
+    }
+    \end{equation}
+    and the constant terms \(a, \bar{a}\) are defined as \(a = \input{tex/numerator_constant}\) and
+    \(\bar{a} = \input{tex/denominator_constant}\).
+\end{theorem}
+
+The proof of Theorem~\ref{theorem_one} is given in the Supplementary Information.
+Theorem~\ref{theorem_one} can be extended to consider multiple
+opponents. The IPD is commonly studied in tournaments and/or Moran Processes
+where a strategy interacts with a number of opponents. The payoff of a player in
+such interactions is given by the average payoff the player received against
+each opponent. More specifically the expected utility of a memory-one strategy
+against \(N\) opponents is given by:
+
+\begin{align}\label{eq:tournament_utility}
+       & \frac{1}{N} \sum\limits_{i=1} ^ {N} {u_q}^{(i)} (p) =
+       \frac{\frac{1}{N} \sum\limits_{i=1} ^ {N} (\frac{1}{2} pQ^{(i)} p^T + c^{(i)} p + a^ {(i)})
+       \prod\limits_{\tiny\begin{array}{l} j=1 \\ j \neq i \end{array}} ^
+       N (\frac{1}{2} p\bar{Q}^{(j)} p^T + \bar{c}^{(j)} p + \bar{a}^ {(j)})}
+       {\prod\limits_{i=1} ^ N (\frac{1}{2} p\bar{Q}^{(i)} p^T + \bar{c}^{(i)} p + \bar{a}^ {(i)})}.
+\end{align}
+
+Eq.~(\ref{eq:tournament_utility}) is the average score (using Eq.~(\ref{eq:optimisation_quadratic})) against the set of opponents.
+
+Estimating the utility of a memory-one strategy against any number of opponents
+without simulating the interactions is the main result used in the rest of this manuscript.
+It will be used to obtain best response memory-one strategies in tournaments
+with and without self interactions in order to explore the limitations of extortion
+and restricted memory.
 
 \section*{Results}
 
-Up to three levels of \textbf{subheading} are permitted. Subheadings should not be numbered.
+Here we define \textit{memory-one best response}
+strategies as a multi dimensional optimisation problem given by:
 
-\subsection*{Subsection}
+\begin{equation}\label{eq:mo_tournament_optimisation}
+    \begin{aligned}
+    \max_p: & \ \sum_{i=1} ^ {N} {u_q}^{(i)} (p)
+    \\
+    \text{such that}: & \ p \in \R_{[0, 1]}
+    \end{aligned}
+\end{equation}
 
-Example text under a subsection. Bulleted lists may be used where appropriate, e.g.
+Optimising this particular ratio of quadratic forms is not trivial. It can be
+verified empirically for the case of a single opponent that there exists at
+least one point for which the definition of concavity does not hold.
+The non concavity of \(u(p)\) indicates multiple local
+optimal points. This is also intuitive. The best response against a cooperator,
+\(q=(1, 1, 1, 1)\), is a defector \(p^*=(0, 0, 0, 0)\). The strategies
+\(p=(\frac{1}{2}, 0, 0, 0)\) and \(p=(\frac{1}{2}, 0, 0, \frac{1}{2})\) are also
+best responses. The approach taken here is to introduce a compact way of
+constructing the discrete candidate set of all local optimal points, and evaluating
+the objective function Eq.~\ref{eq:tournament_utility}. This gives the best
+response memory-one strategy. The approach is given in
+Theorem~\ref{memone_group_best_response}.
 
-\begin{itemize}
-\item First item
-\item Second item
-\end{itemize}
+\begin{theorem}\label{memone_group_best_response}
 
-\subsubsection*{Third-level section}
- 
-Topical subheadings are allowed.
+    The optimal behaviour of a memory-one strategy player \(p^* \in \R_{[0, 1]} ^
+    4\) against a set of \(N\) opponents \(\{q^{(1)}, q^{(2)}, \dots, q^{(N)} \}\)
+    for \(q^{(i)} \in \R_{[0, 1]} ^ 4\) is given by:
+    
+    \[p^* = \textnormal{argmax}\sum\limits_{i=1} ^ N  u_q(p), \ p \in S_q.\]
+    
+    The set \(S_q\) is defined as all the possible combinations of:
+    
+    
+    \begin{equation}\label{eq:s_q_set}
+        S_q =
+        \left\{p \in \mathbb{R} ^ 4 \left|
+            \begin{aligned}
+                \bullet\quad p_j \in \{0, 1\} & \quad \text{and} \quad \frac{d}{dp_k}
+                \sum\limits_{i=1} ^ N  u_q^{(i)}(p) = 0 \\
+                & \quad \text{for all} \quad j \in J \quad \&  \quad k \in K  \quad \text{for all} \quad J, K \\
+                & \quad \text{where} \quad J \cap K = \O \quad
+                \text{and} \quad J \cup K = \{1, 2, 3, 4\}.\\
+                \bullet\quad  p \in \{0, 1\} ^ 4
+            \end{aligned}\right.
+        \right\}.
+    \end{equation}
+    
+    
+    Note that there is no immediate way to find the zeros of \(\frac{d}{dp}
+    \sum\limits_{i=1} ^ N  u_q(p)\) where,
+    
+    \begin{align}\label{eq:mo_tournament_derivative}
+        \frac{d}{dp} \sum\limits_{i=1} ^ {N} {u_q}^{(i)} (p) & = \displaystyle\sum\limits_{i=1} ^ {N}
+        \frac{\left(pQ^{(i)} + c^{(i)}\right) \left(\frac{1}{2} p\bar{Q}^{(i)} p^T + \bar{c}^{(i)} p + \bar{a}^ {(i)}\right)}
+        {\left(\frac{1}{2} p\bar{Q}^{(i)} p^T + \bar{c}^{(i)} p + \bar{a}^ {(i)}\right)^ 2}
+        - \frac{\left(p\bar{Q}^{(i)} + \bar{c}^{(i)}\right) \left(\frac{1}{2} pQ^{(i)} p^T + c^{(i)} p + a^ {(i)}\right)}
+        {\left(\frac{1}{2} p\bar{Q}^{(i)} p^T + \bar{c}^{(i)} p + \bar{a}^ {(i)}\right)^ 2}
+    \end{align}
+    
+    For \(\frac{d}{dp} \sum\limits_{i=1} ^ N  u_q(p)\) to equal zero then:
+    
+    \begin{align}\label{eq:polynomials_roots}
+        \displaystyle\sum\limits_{i=1} ^ {N}
+        \left(pQ^{(i)} + c^{(i)}\right) \left(\frac{1}{2} p\bar{Q}^{(i)} p^T + \bar{c}^{(i)} p + \bar{a}^ {(i)}\right)
+        - \left(p\bar{Q}^{(i)} + \bar{c}^{(i)}\right) \left(\frac{1}{2} pQ^{(i)} p^T + c^{(i)} p + a^ {(i)}\right)
+        & = 0, \quad {while} \\
+        \displaystyle\sum\limits_{i=1} ^ {N} \frac{1}{2} p\bar{Q}^{(i)} p^T + \bar{c}^{(i)} p + \bar{a}^ {(i)} & \neq 0.
+    \end{align}
+    
+\end{theorem}
+
+Finding best response memory-one strategies is analytically feasible using the
+formulation of Theorem~\ref{memone_group_best_response} and resultant
+theory~\cite{Jonsson2005}. However, for large systems building the resultant
+becomes intractable. As a result, best responses will be estimated
+heuristically using a numerical method, suitable for problems with local optima,
+called Bayesian optimisation~\cite{Mokus1978}.
+
+In several evolutionary settings
+such as Moran Processes self interactions are key. Previous work has
+identified interesting results such as the appearance of self recognition
+mechanisms when training strategies using evolutionary algorithms in Moran
+processes~\cite{Knight2018}. This aspect of reinforcement learning can be done for
+best response memory-one strategies by incorporating the strategy itself in the
+objective function as shown in Eq.~\ref{eq:mo_tournament_optimisation}.
+\(K\) is the number of self interactions that will take place.
+
+\begin{equation}\label{eq:mo_evolutionary_optimisation}
+\begin{aligned}
+\max_p: & \ \frac{1}{N} \sum\limits_{i=1} ^ {N} {u_q}^{(i)} (p) + Ku_p(p)
+\\
+\text{such that}: & \ p \in \R_{[0, 1]}
+\end{aligned}
+\end{equation}
+
+For determining the memory-one best response with self interactions, an
+algorithmic approach is considered, called \textit{best response dynamics}. The
+best response dynamics approach used in this manuscript is given by
+Algorithm~\ref{algo:best_response_dynamics}.
+
+\begin{center}
+\begin{minipage}{.55\textwidth}
+\begin{algorithm}[H]
+       $p^{(t)}\leftarrow (1, 1, 1, 1)$\;
+       \While{$p^{(t)} \neq p ^{(t -1)}$}{
+       $p^{(t + 1)} =  \text{argmax} \frac{1}{N} \sum\limits_{i=1} ^ {N} {u_q}^{(i)}
+       (p^{(t)}) + Ku_{p^{(t)}}(p^{(t)})$\;
+       }
+       \caption{Best response dynamics Algorithm}
+       \label{algo:best_response_dynamics}
+\end{algorithm}
+\end{minipage}
+\end{center}
+
+Using this approach it would be possible to create a memory-one best response
+strategy that updates on every generation of a Moran process to recalculate the
+optimal behaviour given the population. This extension of the ``theory of mind''
+is an interesting avenue for future work.
+
+In multi opponent settings,
+where the payoffs matter, strategies trying to exploit their opponents will
+suffer.
+Compared to ZDs, best response memory-one strategies, which have a
+theory of mind of their opponents, utilise their behaviour in order to gain the
+most from their interactions. The question that arises then is whether best
+response strategies are optimal because they behave in an extortionate way.
+
+The results of this section use Bayesian optimisation to generate a data set of best response
+memory-one strategies for \(N=2\) opponents.
+The data set is available at~\cite{glynatsi2019}. It contains a total of 1000 trials
+corresponding to 1000 different instances of a best response strategy in
+tournaments with and without self interactions. For each trial a set of 2 opponents is
+randomly generated and the memory-one best response against them is found.
+In order to investigate whether best responses
+behave in an extortionate matter the SSE method described in ~\cite{Knight2019} is used. More
+specifically,
+in~\cite{Knight2019} the point \(x^*\), in the space of memory-one strategies,
+that is
+the nearest extortionate strategy to a given strategy \(p\) is
+given by,
+
+\begin{equation}\label{eqn:x_star_formula}
+    x^* = {\left(C^{T}C\right)}^{-1}C^{T}\bar{p}
+\end{equation}
+
+where \(\bar{p}=(p_1 - 1, p_2 - 1, p_3, p_4)\) and
+
+\begin{equation}\label{eq:definition_of_C}
+    C =
+    \begin{bmatrix}
+        R - P & R- P \\
+        S - P & T- P \\
+        T - P & S- P \\
+        0     & 0 \\
+    \end{bmatrix}.
+\end{equation}
+
+Once this closest ZDs is found, the squared norm of the remaining error is referred to as sum of squared errors
+of prediction (SSE):
+
+\begin{equation}\label{eqn:x_SSError_formula}
+    \text{SSE} = {\bar{p}} ^ T \bar{p} -
+           \bar{p} C \left(C ^ T C \right) ^ {-1} C ^ T \bar{p}
+         = {\bar{p}} ^ T \bar{p} - \bar{p} C x ^ *
+\end{equation}
+
+Thus, SSE is defined as how far a strategy is from behaving as a ZD. A
+high SSE implies a non extortionate behaviour.
+The distributions of SSE for the best response in tournaments
+(\(N=2\)) with and without self interactions (with \(K=1\)) are given in
+Figure~\ref{fig:sse_distributions}. Moreover, a statistical summary of the SSE
+distributions is given in Table~\ref{table:sserror_stats}.
+
+\begin{table}[!htbp]
+    \begin{center}
+    \resizebox{.8\columnwidth}{!}{%
+    \begin{tabular}{lrrrrrrrrrrr}
+        \toprule
+        & mean & std  & 5\% & 50\% &  95\% & max & median & skew & kurt\\
+        \midrule
+    \textbf{Tournament without self interactions} & 0.34  & 0.40  & 0.028  & 0.17  &
+    1.05  & 2.47  & 0.17  & 1.87 & 3.60 \\
+    \textbf{Tournament with self interactions} & 0.17 & 0.23 & 0.01 &
+    0.12 & 0.67 & 1.53 & 0.12 & 3.42 & 1.92 \\
+        \bottomrule
+    \end{tabular}}
+    \end{center}
+    \caption{SSE of best response memory-one when \(N=2\)}\label{table:sserror_stats}
+\end{table}
+
+\begin{figure}[!htbp]
+    \begin{subfigure}{0.47\textwidth}
+        \begin{center}
+            \includegraphics[width=\linewidth]{img/best_respones_sserror.pdf}
+        \end{center}
+        \caption{SEE distribution for best response in tournaments without self interactions.}
+    \end{subfigure}\hfill
+    \begin{subfigure}{0.47\textwidth}
+        \begin{center}
+            \includegraphics[width=\linewidth]{img/evo_sserror.pdf}
+        \end{center}
+        \caption{SEE distribution for best response in tournaments with self interactions.}
+    \end{subfigure}
+    \caption{SEE distributions for best response in tournaments without and with self interactions.}\label{fig:sse_distributions}
+\end{figure}
+
+For the best response in tournaments that do not include self interactions the
+distribution of SSE is skewed to the left, indicating that the best response
+does exhibit ZDs behaviour and so could be extortionate, however, the best
+response is not uniformly a ZDs. A positive measure of skewness and kurtosis,
+and a mean of 0.34 indicate a heavy tail to the right. Therefore, in several
+cases the strategy is not trying to extort its opponents.
+In~\cite{Hilbe2018} a similar behaviour is refereed to as the \textit{partner
+strategy}. The partner
+strategy aims to share the payoff for mutual cooperation, but it is ready
+to fight back when being exploited. The partner strategy was designed, but the
+best responses which are defined by their opponents seem to exhibit the same
+behaviour.
+
+Similarly, when considering self interactions, the distribution of SSE for the best
+response strategy has skewness and kurtosis that indicate a heavy tail to the
+right. This indicates that evolutionary stable memory-one strategies need to
+more adaptable than a ZDs, and aim for mutual cooperation as well as
+exploitation which is in line with the results of \cite{Hilbe2018} where their
+strategy was designed to adapt and was shown to be evolutionary stable. The
+findings of this work show that an optimal strategy acts in the same way.
+
+The difference between best responses in tournaments without and with self interactions
+is further explored by Fig.~\ref{fig:behaviour_violin_plots}.
+Though, no statistically significant differences have been found, from
+Fig.~\ref{fig:behaviour_violin_plots}, it seems that the best
+response that incorporate self interactions has a higher median $p_2$; which corresponds to the probability of cooperating
+after receiving a defection. Thus, they are more likely to forgive after
+being tricked. This is due to the fact that they could be playing against
+themselves, and they need to be able to forgive so that future cooperation can
+occur.
+
+\begin{figure}[!htbp]
+    \centering
+    \includegraphics[width=.9\textwidth]{img/behaviour_violin_plots.pdf}
+    \caption{Distributions of \(p^*\) for best responses in tournaments and
+    evolutionary settings. The medians, denoted as \(\bar{p}^*\), for tournaments
+    are \(\bar{p}^* = (0, 0, 0, 0)\), and for evolutionary settings
+    \(\bar{p}^* = (0, 0.19, 0, 0)\).}
+    \label{fig:behaviour_violin_plots}
+\end{figure}
+
+The other main finding presented in~\cite{Press2012} was that
+short memory of the strategies was all that was needed.
+We argue that the second limitation of ZDs in multi opponent
+interactions is that of their restricted memory.
+To demonstrate the effectiveness of memory in the IPD we explore a best response
+longer-memory strategy against a given set of memory-one opponents,  and compare
+it's performance to that of a memory-one best response.
+
+In~\cite{Harper2017}, a strategy called \textit{Gambler} which makes
+probabilistic decisions based on the opponent's \(n_1\) first moves, the
+opponent's \(m_1\) last moves and the player's \(m_2\) last moves was
+introduced. In this manuscript Gambler with parameters: $n_1 = 2, m_1 = 1$ and $m_2 = 1$ is used
+as a longer-memory strategy.
+By considering the opponent's first two moves, the opponents last move and the
+player's last move, there are only 16 $(4 \times 2 \times 2)$ possible outcomes
+that can occur, furthermore, Gambler also makes a probabilistic decision of
+cooperating in the opening move. Thus, Gambler is a function \(f: \{\text{C,
+D}\} \rightarrow [0, 1]_{\R}\). This can be hard coded as an element
+of \([0, 1]_{\R} ^ {16 + 1}\), one probability for each outcome plus the opening
+move. Hence, compared to Eq.~\ref{eq:mo_tournament_optimisation}, finding an
+optimal Gambler is a 17 dimensional problem given by:
+
+\begin{equation}\label{eq:gambler_optimisation}
+    \begin{aligned}
+    \max_p: & \ \sum_{i=1} ^ {N} {U_q}^{(i)} (f)
+    \\
+    \text{such that}: & \ f \in \R_{[0, 1]}^{17}
+    \end{aligned}
+\end{equation}
+
+Note that Eq. \ref{eq:tournament_utility} can not be used here for the utility
+of Gambler, and actual simulated players are used. This is done using~\cite{axelrodproject}
+with 500 turns and 200 repetitions, moreover, Eq. \ref{eq:gambler_optimisation}
+is solved numerically using Bayesian optimisation.
+
+Similarly to previous sections, a large data set has been generated with
+instances of an optimal Gambler and a memory-one best response, available
+at~\cite{glynatsi2019}. Estimating a best response Gambler (17 dimensions) is
+computational more expensive compared to a best response memory-one (4
+dimensions). As a result, the analysis of this section is based on a total of
+152 trials. As before, for each trial \(N=2\) random opponents have been selected.
+
+The ratio between Gambler's utility and the best response memory-one strategy's utility has been calculated and its distribution in
+given in Fig.~\ref{fig:utilities_gambler_mem_one}.
+It is evident from Fig.~\ref{fig:utilities_gambler_mem_one} that
+Gambler always performs as well as the best response memory-one strategy and often performs better. There are
+no points where the ratio value is less than 1, thus Gambler never performed less
+than the best response memory-one strategy and in places outperforms it.
+However, against two memory-one opponents Gambler's performance is better than
+the optimal memory-one strategy. This is evidence that in the case of multiple
+opponents, having a
+shorter memory is limiting.
+
+\begin{figure}[!htbp]
+    \centering
+    \includegraphics[width=.5\textwidth]{img/gambler_performance_against_mem_one.pdf}
+    \caption{The ratio between the utilities of Gambler and best response memory-one
+    strategy for 152 different pair of opponents.}\label{fig:utilities_gambler_mem_one}
+\end{figure}
 
 \section*{Discussion}
 
-The Discussion should be succinct and must not contain subheadings.
+This manuscript has considered \textit{best response} strategies in the IPD game, and
+more specifically, \textit{memory-one best responses}. It has proven that:
 
-\section*{Methods}
+\begin{itemize}
+    \item The utility
+          of a memory-one strategy against a set of memory-one opponents can be written as a sum
+          of ratios of quadratic forms (Theorem~\ref{theorem_one}).
+    \item There is a compact way of identifying a memory-one best response to a
+        group of opponents through a search over a discrete set
+        (Theorem~\ref{memone_group_best_response}).
+\end{itemize}
 
-Topical subheadings are allowed. Authors must ensure that their Methods section includes adequate experimental and characterization data necessary for others in the field to reproduce their work.
+Note that Theorem~\ref{memone_group_best_response} which does not only have game theoretic
+novelty, but also the mathematical novelty of solving quadratic ratio optimisation
+problems where the quadratics are non concave.
 
-\bibliography{sample}
+Moreover Theorem~\ref{theorem_one}, allows us to
+obtain a condition for which in an environment of memory-one opponents
+defection is the stable choice, based only on the coefficients of the opponents,
+as stated in Lemma~\ref{lemma:stability_of_defection}.
 
-\noindent LaTeX formats citations and references automatically using the bibliography records in your .bib file, which you can edit via the project menu. Use the cite command for an inline citation, e.g.  \cite{Hao:gidmaps:2014}.
+\begin{lemma}\label{lemma:stability_of_defection}
+    In a tournament of \(N\) players \(\{q^{(1)}, q^{(2)}, \dots, q^{(N)} \}\)
+    for \(q^{(i)} \in \R_{[0, 1]} ^ 4\)
+    defection is stable if the transition probabilities of the
+    opponents satisfy conditions Eq. \ref{eq:defection_condition_one} and Eq. \ref{eq:defection_condition_two}.
 
-For data citations of datasets uploaded to e.g. \emph{figshare}, please use the \verb|howpublished| option in the bib entry to specify the platform and the link, as in the \verb|Hao:gidmaps:2014| example in the sample bibliography file.
+    \begin{equation}\label{eq:defection_condition_one}
+        \sum_{i=1} ^ N (c^{(i)T} \bar{a}^{(i)} - \bar{c}^{(i)T} a^{(i)}) \leq 0
+    \end{equation}
 
-\section*{Acknowledgements (not compulsory)}
+    while,
 
-Acknowledgements should be brief, and should not include thanks to anonymous referees and editors, or effusive comments. Grant or contribution numbers may be acknowledged.
+    \begin{equation}\label{eq:defection_condition_two}
+        \sum_{i=1} ^ N \bar{a}^{(i)} \neq 0
+    \end{equation}
+\end{lemma}
+
+The proof of Lemma~\ref{lemma:stability_of_defection} is given in the
+Supplementary Information and a numerical simulation
+demonstrating the result is given
+in Fig.~\ref{fig:stability_of_defection}.
+
+\begin{figure}[!htbp]
+    \centering
+    \includegraphics[width=.4\linewidth]{img/stability_of_defection_plots.pdf}
+    \caption{A. For \(q_{1}=(0.22199, 0.87073, 0.20672, 0.91861)\),
+    $q_{2}=(0.48841, 0.61174, 0.76591, 0.51842)$ and
+    $q_{3}=(0.2968, 0.18772, 0.08074, 0.73844)$, Eq.~\ref{eq:defection_condition_one} and
+    Eq.~\ref{eq:defection_condition_two} hold and Defector takes over the
+    population. B. For $q_{1}=(0.96703, 0.54723, 0.97268, 0.71482)$,
+    $q_{2}=(0.69773, 0.21609, 0.97627, 0.0062)$ and
+    $q_{3}=(0.25298, 0.43479, 0.77938, 0.19769)$, Eq.~\ref{eq:defection_condition_one} fails
+    and Defector does not take over the population.
+    These results have been obtained by using~\cite{axelrodproject} an open
+    source research framework for the study of the IPD.}\label{fig:stability_of_defection}
+\end{figure}
+
+The empirical results have shown that the performance and the evolutionary
+stability of memory-one strategies rely on adaptability and not on extortion,
+and that memory-one strategies' performance is limited by their memory in cases
+where they interact with multiple opponents.
+
+These results were mainly to investigate the
+behaviour of memory-one strategies and their limitations. A large data set which
+contained best responses in tournaments whilst including or not self
+interactions for \(N=2\)
+was generated and is archived in~\cite{glynatsi2019}. This allowed us to investigate their respective behaviours, and
+whether it was extortionate acts that made them the most favorable strategies.
+It was shown that it was not extortion but adaptability that allowed
+the strategies to gain the most from their interactions. In settings with self interactions
+there
+is some evidence that it is more likely to forgive after being tricked.
+
+All the empirical results presented in this manuscript have been for the case of
+$N=2$. In future work we would consider larger values of $N$, however, we
+believe that for larger values of $N$ the results that have been presented here
+would only be more evident. In addition, we would investigate potential
+theoretical results for the best responses dynamics algorithm
+discussed. Another interesting avenue would be to study the Moran process with a
+dynamically updating best response.
+
+By specifically exploring the entire space of memory-one strategies to identify
+the best strategy for a variety of situations, this work adds to the literature
+casting doubt
+on the effectiveness of ZDs, highlights the importance of adaptability and provides
+a framework for the continued understanding of these important questions.
+
+
+\bibliography{bibliography}
+
+\section*{Acknowledgements}
+
+A variety of software libraries have been used in this work:
+
+\begin{itemize}
+    \item The Axelrod library for IPD simulations~\cite{axelrodproject}.
+    \item The Scikit-optimize library for an implementation of Bayesian optimisation~\cite{tim_head_2018_1207017}.
+    \item The Matplotlib library for visualisation~\cite{hunter2007matplotlib}.
+    \item The SymPy library for symbolic mathematics~\cite{sympy}.
+    \item The Numpy library for data manipulation~\cite{walt2011numpy}.
+\end{itemize}
 
 \section*{Author contributions statement}
 
-Must include all authors, identified by initials, for example:
-A.A. conceived the experiment(s),  A.A. and B.A. conducted the experiment(s), C.A. and D.A. analysed the results.  All authors reviewed the manuscript. 
+N.G. and V.K. conceived the idea. N.G. conducted the experiments, N.G. and V.K.
+analysed the results. All authors reviewed the manuscript.
 
 \section*{Additional information}
 
-To include, in this order: \textbf{Accession codes} (where applicable); \textbf{Competing interests} (mandatory statement). 
-
-The corresponding author is responsible for submitting a \href{http://www.nature.com/srep/policies/index.html#competing}{competing interests statement} on behalf of all authors of the paper. This statement must be included in the submitted article file.
-
-\begin{figure}[ht]
-\centering
-\includegraphics[width=\linewidth]{stream}
-\caption{Legend (350 words max). Example legend text.}
-\label{fig:stream}
-\end{figure}
-
-\begin{table}[ht]
-\centering
-\begin{tabular}{|l|l|l|}
-\hline
-Condition & n & p \\
-\hline
-A & 5 & 0.1 \\
-\hline
-B & 10 & 0.01 \\
-\hline
-\end{tabular}
-\caption{\label{tab:example}Legend (350 words max). Example legend text.}
-\end{table}
-
-Figures and tables can be referenced in LaTeX using the ref command, e.g. Figure \ref{fig:stream} and Table \ref{tab:example}.
+\textbf{Competing interests.} The author(s) declare no competing interests.
 
 \end{document}
